<resources>
    <string name="app_name" translatable="false">tp-eseo-theophilem</string>
    <string name="home_screen_text">bonjour le monde !</string>
    <string name="splash_screen_text">Moreau Théophile - ESEO A2</string>
    <string name="btn_loc">localisation</string>
    <string name="btn_hist">historique</string>
    <string name="btn_param">paramètres</string>
    <string name="localisation">localisation</string>
    <string name="textLocation1">"Vous vous cachez bien au : "</string>
    <string name="defautLocationText1">vous n\'avez pas accepté les autorisations ...</string>
    <string name="defautLocationText2">"Bon plus qu'à faire la distance ci dessous pour retourner travailler "</string>
    <string name="defautLocationTextToEseo">Pas d\'autorisation, pas de distance jusqu\'à l\'ESEO Donc pas de diplôme Donc chien pas content</string>
    <string name="messageDistance1">"Vous êtes à "</string>
    <string name="messageDistance2">" mètres de l'ESEO"</string>
    <string name="distanceToEseoKm">" "</string>
    <string name="whatTheDogSay">quand on réalise que l\'application fonctionne</string>
    <string name="permitionNotAcepted">Veuillez retourner au menu d\'acceuil, cliquer sur paramètres, choisir l\'application et autorisez la localisation</string>
    <string name="messageKm1">"Ce qui donne "</string>
    <string name="messageKm2">" kilomètres jusqu'à l'ESEO"</string>
    <string name="settings">Paramètres</string>
    <string name="bouton_settings">Paramètres des applications</string>
    <string name="bouton_settings_location">Paramètres de localisation</string>
    <string name="bouton_map_eseo">Carte sur l\'ESEO</string>
    <string name="bouton_site_eseo">Site de l\'ESEO</string>
    <string name="bouton_mail">Mail au développeur</string>
    <string name="item_list_empty">Value</string>
</resources>