<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MapsActivity"
    android:background="@color/white"
    >

    <TextView
        android:id="@+id/textLocation1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/textLocation1"
        app:layout_constraintBottom_toTopOf="@+id/locationText"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:textSize="20dp"
        android:textColor="@color/black"
        />

    <TextView
        android:id="@+id/locationText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/defautLocationText1"
        app:layout_constraintBottom_toTopOf="@+id/textLocation2"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textLocation1"
        android:textSize="20dp"
        android:textColor="@color/black"
        />

    <TextView
        android:id="@+id/textLocation2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/defautLocationText2"
        app:layout_constraintBottom_toTopOf="@+id/locationTextToEseo"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/locationText"
        android:gravity="center"
        android:textSize="20dp"
        android:textColor="@color/black"
        />

    <TextView
        android:id="@+id/locationTextToEseo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/defautLocationTextToEseo"
        app:layout_constraintBottom_toTopOf="@+id/locationTextToEseoKm"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textLocation2"
        android:textSize="20dp"
        android:textColor="@color/black"
        />
    <TextView
        android:id="@+id/locationTextToEseoKm"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/distanceToEseoKm"
        app:layout_constraintBottom_toTopOf="@+id/imagePug"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/locationTextToEseo"
        android:textSize="20dp"
        android:textColor="@color/black"
        />

    <TextView
        android:id="@+id/whatTheDogSays"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/whatTheDogSay"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imagePug"
        app:layout_constraintVertical_bias="0.384"
        android:textColor="@color/black"/>

    <ImageView
        android:id="@+id/imagePug"
        android:layout_width="245dp"
        android:layout_height="406dp"
        android:src="@drawable/pug_content"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textLocation2"
        app:layout_constraintVertical_bias="0.754" />


</androidx.constraintlayout.widget.ConstraintLayout>